--- a/6.conteudo/aula1/index.html
+++ b/6.conteudo/aula1/index.html
@@ -1,17 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
-    integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<link rel="stylesheet" href="styles.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Conteudos</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <p>Destacar esse <mark>texto aqui</mark></p>
+
+      <del>texto com del</del>
+
+      <p>Texto com <strong>peso maior</strong></p>
+
+      <p>Citacoes</p>
+
+      <blockquote class="blockquote">
+        <p>Html e css sao a base do frontend</p>
+      </blockquote>
+
+      <figure>
+        <blockquote class="blockquote">
+          Não deixe o ruído das opiniões dos outros abafar a sua voz interior.
+        </blockquote>
+        <figcaption class="blockquote-footer">
+          Por: <cite title="Steve Jobs">Steve Jobs</cite>
+        </figcaption>
+      </figure>
+
+      <br />
+      <p>Listas sem estilo</p>
+
+      <ul class="list-unstyled">
+        <li>item 1</li>
+        <li>item 2</li>
+      </ul>
+
+      <p>Listas com estilo</p>
+      <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+      </ul>
+
+      <p>Lista horizontal</p>
+
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Home</a></li>
+        <li class="list-inline-item"><a href="#">Profile</a></li>
+        <li class="list-inline-item"><a href="#">Projects</a></li>
+        <li class="list-inline-item"><a href="#">Pricing</a></li>
+        <li class="list-inline-item"><a href="#">About</a></li>
+      </ul>
+
+      <p>Imagens</p>
+
+      <div class="col-md-4 m-4">
+        <img class="img-fluid" src="img/g_1.jpg" alt="" />
+      </div>
+
+      <p>Thumbnail</p>
+      <div class="col-md-4 m-4">
+        <img class="img-thumbnail" src="img/art_logo.svg" alt="" />
+      </div>
+
+      <p>imagem com legenda</p>
+
+      <figure>legenda</figure>
+
+      <div class="col-md-3 m-4">
+        <figure class="figure">
+          <img
+            src="./img/g_2.jpg"
+            alt=""
+            class="figure-img img-fluid rounded"
+          />
+
+          <figcaption class="figure-caption">Grafite</figcaption>
+        </figure>
+      </div>
+
+      <div class="col-6">
+        <table class="table m-4">
+          <thead class="table m-4">
+            <th scope="col">ID</th>
+            <th scope="col">Nome</th>
+            <th scope="col">Sobrenome</th>
+          </thead>
+
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+
+              <td>Italo</td>
+
+              <td>Alves</td>
+            </tr>
+
+            <tr>
+              <th scope="row">2</th>
+
+              <td colspan="2">Maria</td>
+            </tr>
+
+            <tr>
+              <th scope="row">3</th>
+
+              <td>Joaquina</td>
+
+              <td>Alves</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="col-6 mt-5">
+        <table class="table table-dark table-striped">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Produto</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+
+              <th>Arroz</th>
+            </tr>
+
+            <tr>
+              <th scope="row">2</th>
+
+              <th>Feijao</th>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+  </body>
 </html>
